[package]
name = "amd64_timer"
version = "1.3.0
authors = ["William Cody Laeder <codylaeder@gmail.com>", "Zac Burns <That3Percent@gmail.com>"]
repository = "https://github.com/valarauca/amd64_timer.git"
homepage = "https://github.com/valarauca/amd64_timer"
description = "Get CPU ticks."
license = "MIT"
readme = "README.md"
documentation = "https://github.com/valarauca/amd64_timer"
keywords = ["amd64","clock", "ticks"]

[build-dependencies]
rustc_version = "0.2"

[features]
default = []
std = []
OLD_ASM = []
